--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-.App {
-  text-align: center;
+body {
+  background-color: rgba(250, 250, 250);
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
