add style, media queries

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,9 +1,10 @@
-.container {
-  margin: 50px 0;
+.card-container {
+  margin: 1rem 0;
 }
 
 .card {
   margin: 0 2% !important;
+  width: 20rem;
 }
 
 .infected {
@@ -16,4 +17,10 @@
 
 .deaths {
   border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+}
+
+@media (max-width: 770px) {
+  .card {
+    margin: 2% 6% !important;
+  }
 }
