--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
+  margin: auto;
   background-color: rgba(250, 250, 250);
+  font-family: "Coda Caption", sans-serif;
 }
 
 .container {
@@ -8,4 +19,19 @@ body {
   align-items: center;
   justify-content: center;
   margin: auto;
+}
+
+h1 {
+  text-align: center;
+  font-size: 45px;
+}
+
+h1 span {
+  font-size: 55px;
+}
+
+@media (max-width: 770px) {
+  .container {
+    margin: auto !important;
+  }
 }
