--- a/src/components/Chart/Charts.css
+++ b/src/components/Chart/Charts.css
@@ -1,6 +1,12 @@
-.container {
+.chart-container {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 85%;
+}
+
+@media (max-width: 770px) {
+  .chart-container {
+    width: 100%;
+  }
 }
